@@ -16,6 +16,24 @@
   <url type="bugtracker">https://github.com/mike-fabian/ibus-typing-booster/issues</url>
   <url type="help">https://mike-fabian.github.io/ibus-typing-booster/documentation.html</url>
   <releases>
+    <release version="1.5.9" date="2016-10-24" urgency="medium">
+      <description>
+        <ul>
+          <li>
+            Make it possible to use a database in different locations than the default
+          </li>
+          <li>
+            Clear candidate list as well when clearing the lookup table
+          </li>
+          <li>
+            Add missing CLDR xml files to tar ball
+          </li>
+          <li>
+            Add unit tests
+          </li>
+        </ul>
+      </description>
+    </release>
     <release version="1.5.8" date="2016-10-10" urgency="medium">
       <description>
         <ul>
